# Project-GOS

./: .gitignore  Makefile  README.md  README_PROJECT_GOS.md  docker-compose.yml  merge_project_gos.sh  merge_project_gos_root.sh  pyproject.toml  requirements.txt  tree.txt
.github/workflows/: ci.yml
api/: auth.py  fastapi_app.py  main.py  schemas.py
api/routers/: score.py
api/routers/config/: spice.yml
core/: __init__.py
core/disarm/: registry.py  sync.py  tree.txt
core/disarm/api/: auth.py
core/engines/: __init__.py  catma.py  game.py  updc.py
core/mappers/: mapper.py
core/schemas/: __init__.py  domain.py
core/scoring/: __init__.py  base.py  registry.py  spice.py  updc.py
core/scoring/config/: spice.yaml  updc.yaml
core/spice/: v22.py
data/: entities.csv  incidents.json  links.csv
db/: cypher_constraints.cql  ddl.sql
ops/: docker-compose.yml
osint-dashboard-debian/osint-dashboard/: debug_discovery.py
osint-dashboard-debian/osint-dashboard/modules/: cisa_kev.py  cve_nvd.py  hackernews_security.py  shodan_counts.py  swpc_space_weather.py  usgs_quakes.py
pipeline/enrich/: enrich.py
pipeline/graph/: neo4j_client.py
pipeline/ingest/: ingest.py
pipeline/normalize/: normalize.py
sim/: tickloop.py
tests/: test_catma.py  test_disarm_registry.py  test_engines_import.py  test_game_engine.py  test_graph_upsert.py  test_ingest_event.py  test_mapper.py  test_normalize.py  test_score_router.py  test_scoring.py  test_spice_engine.py  test_spice_report.py  test_tickloop.py  test_updc_engine.py
ui/: app.py
ui/webapp/: app.py
(+18 files in other folders)
